cmake_minimum_required(VERSION 3.0)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled ACW002.cpp HDU1003.cpp HDU1003.h fmk.cpp "LeetCode 435.cpp" "LeetCode 860.cpp" ACW148.cpp ACW836.cpp SFDP02.cpp "FTCT002(1).cpp" FTCT002.cpp FTCT001.cpp ACW838.cpp lanqiaobei2015.1.cpp lanqiaobei20201.1.cpp lanqiaobei20201.3.cpp lanqiaobei20201.4.cpp lanqiaobei20201.6.cpp lanqiaobei20201.7.cpp lanqiaobei20211.1.cpp lanqiaobei20211.2.cpp)
